<resources>
    <string name="app_name">PhoneRFFL</string>
    <string name="haptics">Haptics</string>
    <string name="show_ellipse">Show Ellipse</string>
    <string name="image_view">Image View</string>
    <string name="png_item">PNG Item</string>
    <string name="start">START</string>
    <string name="StartTime">00:00:00</string>
    <string name="reset">RESET</string>
    <string name="show_AOA">Show AOA</string>
    <string name="AOA_Azi">Init</string>
    <string name="AOA_El">Please Wait</string>
    <string name="connect">Connect</string>
    <string name="d3_on">D3 (ON)</string>
    <string name="d4_on">D4 (ON)</string>
    <string name="d5_on">D5 (ON)</string>
    <string name="d6_on">D6 (ON)</string>
    <string name="d7_on">D7 (ON)</string>
    <string name="d3_off">D3 (OFF)</string>
    <string name="d4_off">D4 (OFF)</string>
    <string name="d5_off">D5 (OFF)</string>
    <string name="d6_off">D6 (OFF)</string>
    <string name="d7_off">D7 (OFF)</string>
    <string name="disconnect">Disconnect</string>
    <string name="usb_terminal_output">USB Terminal Output</string>
    <string name="not_connected">Not Connected</string>
    <string name="broadcast_on">Broadcast (ON)</string>
    <string name="broadcast_off">Broadcast (OFF)</string>
    <string name="single_read">Single Read</string>
    <string name="visualizer">Visualizer</string>
    <string name="connection_status_indicator">Connection Status Indicator</string>
    <string name="terminal">No Data</string>
    <string name="simulated">Simulated</string>
    <string name="show_widgets">Widgets</string>
    <string name="filtered">Filtered</string>
    <string name="filter">Filter</string>
    <string name="logging">Logging</string>
    <string name="invert_azimuth_axis">Invert Azimuth Axis</string>
    <string name="invert_elevation_axis">Invert Elevation Axis</string>
    <string name="elevation_offset_db">Elevation Offset (dB)</string>
    <string name="azimuth_offset_db">Azimuth Offset (dB)</string>
    <string name="back">Back</string>
    <string name="corr">Corr</string>
    <string name="save">Save</string>
    <string name="enable_parallax_correction">Enable Parallax Correction</string>
    <string name="estimated_distance_inch">Estimated Distance (inch)</string>
    <string name="camera_x_offset_inch">Camera x-Offset (inch)</string>
    <string name="camera_y_offset_inch">Camera y-Offset (inch)</string>
    <string name="config_iq">Config DAQ</string>
    <string name="connect_daq">Connect DAQ</string>
    <string name="frequency_mhz">Frequency (MHz)</string>
    <string name="ip_address">IP Address</string>
    <string name="default_ip_addr">192.168.1.10</string>
    <string name="_2409">2409</string>
</resources>