<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameTimer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:text="@string/reset"
            android:textColor="@color/red"
            android:textSize="30sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/lblTimerStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/StartTime"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnStartStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:background="@color/gray"
            android:text="@string/start"
            android:textColor="@color/green"
            android:textSize="30sp"
            tools:ignore="TextContrastCheck" />

    </androidx.appcompat.widget.Toolbar>

</FrameLayout>