<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CorrectionSettingsFragment">

    <LinearLayout
        android:id="@+id/pnlCorrectionSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#251A3C"
        android:gravity="center"
        android:padding="16dp"
        android:visibility="invisible"
        tools:ignore="UselessParent"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/azimuth_offset_db"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:layout_marginEnd="8dp"/>

                <EditText
                    android:id="@+id/corr_factors_txtOffsetAzimuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal|numberSigned"
                    android:backgroundTint="@android:color/white"
                    android:autofillHints="Enter an azimuth delta dB offset value."
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/elevation_offset_db"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:layout_marginEnd="8dp"/>

                <EditText
                    android:id="@+id/corr_factors_txtOffsetElevation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal|numberSigned"
                    android:backgroundTint="@android:color/white"
                    android:autofillHints="Enter an azimuth delta dB offset value."
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/corr_factors_chkInvertAzimuth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/invert_azimuth_axis"
                android:textColor="#FFFFFF" />

            <CheckBox
                android:id="@+id/corr_factors_chkInvertElevation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invert_elevation_axis"
                android:textColor="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <Button
                    android:id="@+id/corr_factors_btnSave"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="350dp"
                    android:layout_weight="1"
                    android:backgroundTint="#135516"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:text="@string/save"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/corr_factors_btnBack"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/back"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:backgroundTint="#FF5722"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="150dp"
                    android:layout_marginTop="8dp"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
